# Clowder

./: .editorconfig  .gitignore  EULA.md  LICENSE  PRIVACY.md  README.md  THIRD-PARTY-NOTICES.md
.githooks/: pre-commit
packaging/: README.md  pack-msix.ps1
packaging/msix/: AppxManifest.template.xml
src/: index.html  package-lock.json  package.json
src/app/: App.css  App.tsx  main.tsx
src/app/components/: BrandMark.tsx  Icon.tsx
src/app/features/chrome/: ResizeHandles.tsx  TitleBar.tsx  panels.ts
src/app/features/explorer/: Explorer.tsx  FolderNav.tsx  WorkspaceTree.tsx  store.ts  useEntryDrag.ts  util.ts
src/app/features/sessions/: Sessions.tsx
src/app/features/settings/: SettingsPopover.tsx  store.ts
src/app/features/terminal/: Terminal.tsx  TerminalView.tsx  terminalPool.ts
src/app/features/viewer/: HtmlViewer.tsx  MdViewer.tsx
src/app/features/workspace/: TileTree.tsx  TintPicker.tsx  Welcome.tsx  Workspace.tsx  model.ts  (+3 more)
src/app/lib/: beacon.ts  clipboard.ts  markdown.ts  mermaid.ts  openTarget.ts  previewImages.ts  quote.ts  renderDoc.ts  sanitize.ts  sessions.ts  settings.ts  slugify.ts  tauri.ts
src/app/types/: markdown-it-plugins.d.ts
src/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/conpty/: Microsoft.Windows.Console.ConPTY.nuspec  README.md
src/src-tauri/icons/: icon.icns
src/src-tauri/src/: beacon.rs  beacon_install.rs  conpty_check.rs  correlate.rs  fs_ops.rs  lib.rs  link.rs  liveness.rs  main.rs  pty.rs  quote.rs  selftest.rs  sessions.rs  settings.rs  spool.rs
