[package]
name = "deck"
version = "0.1.0"
description = "Terminal workspace for parallel Claude Code sessions"
authors = ["slnu21"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name from colliding with the bin name on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
base64 = "0.22.1"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
